# pytuist

./: README.md  TODO.md  demo.py  dev_setup.ps1  main.py  pyproject.toml
.github/workflows/: build_and_publish.yml  qa.yml
notebooks/: scratch.ipynb
pytuist/: pytuist.py  render.py
src/: main.py  pytuist.py  render.py
test/: test_root.py  test_root_again.py
test/child/: test_child.py
test/child/grandchild/: test_another_grandchild.py  test_grandchild.py
test/resources/: example_pytest_output.txt
test/unit/: actual_test.py
