[tool.poetry]
name = "pytuist"
version = "0.0.1a1"
description = "A TUI (terminal user interface) for pytest, because testing should be fun."
authors = ["Nic Harvey <nicharvey@protonmail.com>"]
readme = "README.md"
packages = [{include = "pytuist"}]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^13.3.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0"
pytest = "^6.2"
pytest-cov = "^3.0"
flake8 = "^6.0.0"

[tool.poetry.group.examples.dependencies]
ipykernel = "^6.5"

[tool.poetry.group.profile.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
