[tool.poetry]
name = "pytuist"
version = "0.0.1a3"
description = "A TUI (terminal user interface) for pytest, because testing should be fun."
authors = ["Nic Harvey <nicharvey@protonmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.3.1"

[tool.poetry.group.dev.dependencies]
poetry = "^1.3"
mypy = "^1.0"
pytest = "^6.2"
pytest-cov = "^3.0"
flake8 = "^6.0.0"

[tool.poetry.group.examples.dependencies]

[tool.poetry.group.profile.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pytuist = "src.main:main"